test/typecheck/errors/nested-return.boa
visit(input, visitor {
    before n: Statement -> {
        visit(n, visitor {
            after n: Statement -> {
            }
        });
        return;
    }
});
